--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.14",
+    "@types/nodemon": "^1.19.2",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.2"
